--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -3,7 +3,7 @@ name: Docker build, publish and deploy
 on:
   push:
     branches:
-      - master
+      - main
       - dev
 
   workflow_dispatch:
@@ -14,9 +14,9 @@ on:
         default: 'latest'
 
 env:
-  docker_label: "${{ inputs.docker_label || github.ref == 'refs/heads/master' && 'latest' || 'dev' }}"
-  TARGET_FOLDER: "${{ github.ref == 'refs/heads/master' && secrets.SSH_PROD_FOLDER || secrets.SSH_DEV_FOLDER }}"
-
+  docker_label: "${{ inputs.docker_label || github.ref == 'refs/heads/main' && 'latest' || 'dev' }}"
+  TARGET_FOLDER: "${{ github.ref == 'refs/heads/main' && secrets.SSH_PROD_FOLDER || secrets.SSH_DEV_FOLDER }}"
+  edulint_web_ref: "${{ github.ref == 'refs/heads/main' && 'main' || 'dev' }}"
 
 jobs:
   docker-build-and-publish-image:
@@ -42,7 +42,7 @@ jobs:
           push: true
           tags: edulint/edulint-web-frontend:${{ env.docker_label }}
 
-  deploy:
+  deploy-standalone-frontend:
     needs: docker-build-and-publish-image
     runs-on: ubuntu-latest
     steps:
@@ -58,3 +58,9 @@ jobs:
             docker-compose pull
             docker-compose up -d --build
             echo "Successfully deployed, hooray!"
+
+  redeploy-full-stack:
+    needs: docker-build-and-publish-image
+    call-workflow-passing-data:
+      uses: GiraffeReversed/edulint-web/blob/main/.github/workflows/deploy.yaml@${{ env.edulint_web_ref }}
+
