--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -61,5 +61,5 @@ jobs:
 
   redeploy-full-stack:
     needs: docker-build-and-publish-image
-    uses: GiraffeReversed/edulint-web/blob/main/.github/workflows/deploy.yaml@${{ env.edulint_web_ref }}
+    uses: GiraffeReversed/edulint-web/blob/main/.github/workflows/deploy.yaml@dev
 
