--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       SSH_KEY: ${{ secrets.SSH_KEY }}
       SSH_PROD_FOLDER: ""
       SSH_DEV_FOLDER: ""
-    inputs:
+    with:
       TARGET_FOLDER: ${{ env.TARGET_FOLDER }}
 
 
