--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -13,7 +13,7 @@ on:
 
 env:
   docker_label: "${{ inputs.docker_label || github.ref == 'refs/heads/main' && 'latest' || 'dev' }}"
-  TARGET_FOLDER: "${{ github.ref == 'refs/heads/main' && secrets.SSH_PROD_FOLDER || secrets.SSH_DEV_FOLDER }}"
+  target_folder: "${{ github.ref == 'refs/heads/main' && secrets.SSH_PROD_FOLDER || secrets.SSH_DEV_FOLDER }}"
   edulint_web_ref: "${{ github.ref == 'refs/heads/main' && 'main' || 'dev' }}"
 
 jobs:
@@ -27,8 +27,8 @@ jobs:
       SSH_PROD_FOLDER: ""
       SSH_DEV_FOLDER: ""
     with:
-      TARGET_FOLDER: "/tmp"
-      BRANCH: "dev"
+      TARGET_FOLDER: ${{ env.target_folder }}
+      BRANCH: "dev"  # github.ref_name
 
 
 
