--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -18,6 +18,23 @@ env:
 
 jobs:
 
+  docker-build-and-publish-image:
+    # https://github.com/marketplace/actions/build-and-push-docker-images
+    # We can skip some of the steps.
+    runs-on: ubuntu-latest
+    steps:
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
   redeploy-full-stack:
     needs: docker-build-and-publish-image
     steps:
