--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -36,9 +36,8 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
   redeploy-full-stack:
+    uses: GiraffeReversed/edulint-web/.github/workflows/deploy.yaml@dev
     needs: docker-build-and-publish-image
-    steps:
-      - uses: GiraffeReversed/edulint-web/.github/workflows/deploy.yaml@dev
     secrets:
       SSH_HOST: ${{ secrets.SSH_HOST }}
       SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
